Initialized with HTML code

--- a/index.html
+++ b/index.html
@@ -12,19 +12,36 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <main>
+    <section>
+      <div class="card">
+        <div class="card__image">
+          <img src="./images/bg-pattern-card.svg" alt="card-background">
+        </div>
+        <div class="card_title">
+          <h1>Victor Crest <span>26</span></h1>
+          <p>London</p>
+        </div>
+        <hr>
+        <div class="card_stats">
+          <div>
+            <h2>80K</h2>
+            <p>Followers</p>
+          </div>
+          <div>
+            <h2>803K</h2>
+            <p>Likes</p>
+          </div>
+          <div>
+            <h2>1.4K</h2>
+            <p>Photos</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
   
 </body>
 </html>
