Added required flex stylings

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 
   <main>
-    <section>
-      <div class="card">
+    <section class="flex-container flex-container-in-center ht-100">
+      <div class="flex-container flex-direction-column card">
         <div class="card__image">
           <img src="./images/bg-pattern-card.svg" alt="card-background">
         </div>
@@ -23,8 +23,8 @@
           <h1>Victor Crest <span>26</span></h1>
           <p>London</p>
         </div>
-        <hr>
-        <div class="card_stats">
+        <div class="horizontal-line"></div>
+        <div class="flex-container flex-container-in-center card_stats">
           <div>
             <h2>80K</h2>
             <p>Followers</p>
