Added text stylings and adjusted spaces

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="./images/bg-pattern-card.svg" alt="card-background">
         </div>
         <div class="card_title">
-          <h1>Victor Crest <span>26</span></h1>
+          <h1><span>Victor Crest </span>26</h1>
           <p>London</p>
         </div>
         <div class="horizontal-line"></div>
