--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <main>
     <section class="flex-container flex-container-in-center ht-100">
       <div class="flex-container flex-direction-column card">
-        <div class="card__image">
+        <div class="card_image">
           <img src="./images/bg-pattern-card.svg" alt="card-background">
+          <div class="flex-container flex-direction-column flex-container-in-center profile">
+            <img src="./images/image-victor.jpg" alt="profile"></div>
         </div>
         <div class="card_title">
           <h1><span>Victor Crest </span>26</h1>
@@ -41,7 +46,8 @@
       </div>
     </section>
   </main>
-  
-  
+
+
 </body>
+
 </html>
